fixed spacing, to make container bigger

--- a/src/App.css
+++ b/src/App.css
@@ -110,13 +110,13 @@ p{
     padding: 60px 0;
   }
   .column-40{
-    width: 80%;
+    width: 90%;
   }
   .column-45{
-    width: 80%;
+    width: 90%;
   }
   .column-50{
-    width: 80%;
+    width: 90%;
   }
 
 }
