--- a/src/components/css/ChooseUs.css
+++ b/src/components/css/ChooseUs.css
@@ -8,7 +8,8 @@
     padding: 120px 10%;
 }
 .slick-slider{
-    margin-top: 60px;
+    width: 100%;
+    padding: 0;
 }
 .slick-dots li.slick-active button:before{
     color: #fff;
@@ -16,4 +17,9 @@
 
 .slick-dots li button:before {
     color: rgba(255,255,255.5)
+}
+@media screen and (max-width: 500px){
+    .why-us{
+        padding: 80px 5%;
+    }
 }
