--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -20,7 +20,7 @@
 }
 @media screen and (max-width: 750px){
     .main-content{
-        top: 30%;
+        top: 60%;
     }
     .main{
         height: 75vh;
