--- a/src/components/css/ServingMaryland.css
+++ b/src/components/css/ServingMaryland.css
@@ -5,6 +5,7 @@
     background-repeat: no-repeat;
     text-align: center;
     padding: 150px 0;
+    margin-top: -5px;
 }
 .serving-maryland-content{
     padding: 0 10%;
